# brickkit

./: PDF_INSTRUCTIONS_README.md  README.md  debug_detailed.py  debug_omr.py  pyproject.toml  repomix-output-pixeljetstream-ldrawloader.xml  requirements.txt  setup.py  test_agent.py  test_leocad_integration.py
brick-linkfrontend/: README.md  package-lock.json  package.json
brick-linkfrontend/app/: globals.css  page.tsx
brick-linkfrontend/app/ldraw/[...key]/: route.ts
brick-linkfrontend/components/: bouncing-logo.tsx  brick-stacking-loader.tsx  ldraw-viewer.tsx  lego-builder.tsx  pdf-download-button.tsx
brick-linkfrontend/public/ldraw/: LDConfig.ldr  p  parts
brick-linkfrontend/public/ldraw/models/: 10190-1_Market_Street.mpd  geometric_test.ldr  red_race_car.mpd  simple_test.mpd  single_part_test.ldr  ultra_simple.ldr
omr_output/instructions/: bom.csv
src/: __init__.py  agent.py  cli.py  config.py  leocad_service.py  main.py  models.py  omr_search.py  pdf_instruction_service.py
src/api/: __init__.py  app.py  models.py  routes.py
